# hovercraft_cpp

./: .gitignore  tags
src/: CMakeLists.txt
src/hovercraft/: CMakeLists.txt
src/hovercraft/src/: $  callback.cpp  create_integrator_cost.cpp  create_integrator_rk4.cpp  estimator.cpp  main.cpp  optimal_problem.cpp  test2.cpp  test_file.cpp
src/mylibrary/: CMakeLists.txt
src/mylibrary/include/: Cost.hpp  HC_node.hpp  Hovercraft_model.hpp  Kalman_filter.hpp  MPC.hpp  Reference.hpp  create_integrator.hpp
src/mylibrary/src/: Cost.cpp  HC_node.cpp  Hovercraft_model.cpp  Kalman_filter.cpp  MPC.cpp  Reference.cpp  create_integrator.cpp  create_integrator_cost.cpp  hc_server.cpp
